--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "jest": "^28.1.0",
     "mobx": "^6.6.0",
     "mobx-react-lite": "^3.4.0",
     "next": "12.1.6",
